--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lighthouse"
 description = "Virtual reality basestation power management in Rust"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Shayne Hartford <shaybox@shaybox.com>"]
 edition = "2021"
 readme = "README.md"
@@ -11,19 +11,19 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uuid = "1.2.2"
-serde = "1.0.124"
-btleplug = { version = "0.10.3", features = ["serde"] }
-tokio = { version = "1.22.0", features = ["full"] }
-log = "0.4.17"
+uuid = "1.3.0"
+serde = "1.0.156"
+btleplug = { version = "0.10.4", features = ["serde"] }
+tokio = { version = "1.26.0", features = ["full"] }
+tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
-error-stack = "0.2.4"
-clap-verbosity-flag = { git = "https://github.com/ShayBoxs-Forks/clap-verbosity-flag.git", version = "2.0.0" }
-clap = "4.0.27"
+error-stack = "0.3.1"
+clap-verbosity-flag = { git = "https://github.com/ShayBoxs-Forks/clap-verbosity-flag.git", default-features = false, features = ["tracing"] }
+clap = "4.1.8"
 
+# https://github.com/johnthagen/min-sized-rust
 [profile.release]
-strip = true
-opt-level = "z"
+strip = true      # Automatically strip symbols from the binary.
+opt-level = "z"   # Optimize for size.
 lto = true
 codegen-units = 1
-panic = "abort"
